# temporal-polyglot-demo

./: README.md
nodejs/: README.md  package.json
nodejs/src/: client-grpc.ts  client-protobufs.ts  client-rate-limits.ts  client.ts  worker.ts  workflows.ts
protos/: messages.proto  namespaced-messages.proto
python/: .gitignore  README.md  pyproject.toml
python/python/: activity_worker.py  ai-messages.proto  protobufs_activity_worker.py  rate_limit_activity_worker.py
typescript/: package-lock.json  package.json
typescript/src/: client.ts  payload-converter.ts  worker.ts  workflows.ts
